# kaldifst

./: .buildinfo  .flake8  .gitignore  CMakeLists.txt  MANIFEST.in  README.md  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.py
.github/workflows/: build-doc.yml  build-pip.yml  build-wheels-aarch64.yaml  build-wheels-linux.yaml  build-wheels-macos.yaml  build-wheels-win32.yaml  build-wheels-win64.yaml  build-wheels.yaml  build-windows.yml  build.yml  build_conda_macos.yml  build_conda_ubuntu.yml  build_conda_windows.yml  nightly-windows.yml  nightly.yml  publish_to_pypi.yml  test-pip-install.yaml
_sources/: index.rst.txt
_sources/convert-k2-to-openfst/: convert-acceptor.rst.txt  convert-transducer.rst.txt
_sources/install/: index.rst.txt
_sources/lattice/: intro.rst.txt
_sources/python_api/: api.rst.txt
_sources/quick_start/: index.rst.txt  quick-start-2.rst.txt  quick-start-3.rst.txt
_static/: documentation_options.js
cmake/: googletest.cmake  openfst.cmake  pybind11.cmake
convert-k2-to-openfst/: convert-acceptor.html  convert-transducer.html  index.html
docs/: Makefile  README.md  gen-api-doc.py
docs/source/: conf.py  index.rst
docs/source/convert-k2-to-openfst/: index.rst
docs/source/convert-k2-to-openfst/code/: Makefile  convert-acceptor.py  convert-transducer.py
docs/source/install/: index.rst
docs/source/lattice/: index.rst
docs/source/lattice/code/: Makefile  ex1.py
docs/source/python_api/: api.rst  index.rst
docs/source/python_api/code/: .gitignore  Makefile
docs/source/python_api/code/add_self_loops/: ex.py
docs/source/python_api/code/arcsort/: Makefile  acceptor.py  transducer1.py  transducer2.py
docs/source/python_api/code/compose/: ex.py
docs/source/python_api/code/connect/: ex.py
docs/source/python_api/code/convert_nbest_to_vector/: ex1.py  ex2.py
docs/source/python_api/code/determinize/: ex.py
docs/source/python_api/code/determinizestar/: ex.py
docs/source/python_api/code/draw/: .gitignore  Makefile  ex.py
docs/source/python_api/code/equal_align/: ex.py
docs/source/python_api/code/fstcompile/: Makefile  acceptor1.py  acceptor2.py  transducer1.py  transducer2.py
docs/source/python_api/code/get_linear_symbol_sequence/: Makefile  ex.py
docs/source/python_api/code/invert/: ex.py
docs/source/python_api/code/lattice_scale/: ex.py
docs/source/python_api/code/lattice_to_nbest/: ex1.py  ex2.py
docs/source/python_api/code/make_linear_acceptor/: ex.py
docs/source/python_api/code/minimize/: acceptor.py  transducer.py
docs/source/python_api/code/minimize_encoded/: Makefile  acceptor.py  transducer.py
docs/source/python_api/code/reverse/: Makefile  ex1.py  ex2.py  ex3.py  ex4.py
docs/source/python_api/code/rmepsilon/: ex.py
docs/source/python_api/code/scale_lattice/: ex1.py  ex2.py
docs/source/python_api/code/shortest_path/: Makefile  ex1.py  ex2.py
docs/source/quick_start/: index.rst  quick-start-4.rst  quick-start.rst
docs/source/quick_start/code/: Makefile  quick-start-2.py  quick-start-3.py  quick-start.py
docs/source/quick_start/code/quick-start-4/: sequential-reader.py  writer.py
docs/source/read-write-ark-scp/: index.rst
docs/source/read-write-ark-scp/code/: Makefile  random-access-reader.py
docs/source/referencens/: index.rst
install/: index.html
kaldifst/: CMakeLists.txt
kaldifst/csrc/: CMakeLists.txt  basic-filebuf.h  const-integer-set-inl.h  const-integer-set.h  context-fst.cc  context-fst.h  deterministic-fst-inl.h  deterministic-fst.h  determinize-star-inl.h  determinize-star.h  fstext-utils-inl.h  fstext-utils.h  grammar-context-fst.h  io-funcs-inl.h  io-funcs.h  kaldi-fst-io-inl.h  kaldi-fst-io-test.cc  kaldi-fst-io.cc  kaldi-fst-io.h  kaldi-holder-inl.h  kaldi-holder.cc  kaldi-holder.h  kaldi-io-inl.h  kaldi-io.cc  kaldi-io.h  kaldi-math.cc  kaldi-math.h  kaldi-pipebuf.h  kaldi-semaphore.cc  kaldi-semaphore.h  kaldi-table-inl.h  kaldi-table.cc  kaldi-table.h  lattice-utils-inl.h  lattice-utils.h  lattice-weight.h  log.h  parse-options.cc  parse-options.h  pre-determinize-inl.h  (+9 more)
kaldifst/python/: CMakeLists.txt
kaldifst/python/csrc/: CMakeLists.txt  arc.cc  arc.h  const-fst.cc  const-fst.h  context-fst.cc  context-fst.h  determinize-star.cc  determinize-star.h  expanded-fst.cc  expanded-fst.h  float-weight.cc  float-weight.h  fst.cc  fst.h  fstarcsort.cc  fstarcsort.h  fstcompile.cc  fstcompile.h  fstconnect.cc  fstconnect.h  fstdeterminize.cc  fstdeterminize.h  fstdraw.cc  fstdraw.h  fstext-utils.cc  fstext-utils.h  fstinfo.cc  fstinfo.h  fstinvert.cc  fstinvert.h  fstminimize.cc  fstminimize.h  fstreverse.cc  fstreverse.h  fstrmepsilon.cc  fstrmepsilon.h  kaldi-table.cc  kaldi-table.h  kaldifst.cc  (+19 more)
kaldifst/python/kaldifst/: __init__.py  iterator.py  lattice_to_nbest.py  table_types.py
kaldifst/python/kaldifst/utils/: __init__.py  k2_converter.py
kaldifst/python/tests/: CMakeLists.txt  test_arc.py  test_arc_sort.py  test_compile.py  test_compose.py  test_determinize.py  test_determinize_star.py  test_float_weight.py  test_invert.py  test_k2_converter.py  test_minimize.py  test_minimize_encoded.py  test_reverse.py  test_rmepsilon.py  test_std_const_fst.py  test_std_vector_fst.py  test_symbol_table.py  test_vector_fst_io.py
lattice/: index.html  intro.html
python_api/: api.html  index.html
quick_start/: index.html  quick-start-2.html  quick-start-3.html  quick-start-4.html  quick-start.html
read-write-ark-scp/: index.html
referencens/: index.html
scripts/: build_conda.sh  check_style_cpplint.sh
scripts/conda/kaldifst/: build.sh  meta.yaml
